# Smart-Month-End-Enclosure-Generator

./: .env.example  .gitignore  AUTHENTICATION_GUIDE.md  COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  FIREBASE_SETUP_GUIDE.md  FIXES_APPLIED.md  Here’s an all-in-one project summary for your hack.md  IMPLEMENTATION_COMPLETE.md  LOCAL_DEVELOPMENT.md  MULTI_AGENT_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_MULTI_AGENT.md  README.md  STREAMLIT_COMMUNITY_CLOUD_GUIDE.md  check-venv.sh  deploy-complete-system.sh  deploy-multi-agent-cloudrun.sh  docker-compose.yml  requirements.txt  setup-databases.sh  start-local.sh  start-multi-agent-system.sh  stop-multi-agent-system.sh
adk-orchestrator/: .env.example  Dockerfile  elasticity_test.py  pyproject.toml  requirements.txt  server.py  test_local.py  test_workflow.py
adk-orchestrator/month_end_agent/: __init__.py  agent.py
adk-orchestrator/services/: __init__.py  auth_service.py  azure_llm_service.py  embedding_service.py  report_service.py  storage_service.py
agents/analytics/: Dockerfile  main.py
agents/chatbot/: Dockerfile  main.py  requirements.txt
agents/checklist/: Dockerfile  main.py  requirements.txt
agents/classifier/: main.py  requirements.txt
agents/extractor/: Dockerfile  main.py  (+1 more)
deploy/: deploy-adk-agent.sh  deploy-all.sh  deploy-backend-cloudrun.sh  deploy-frontend-cloudrun.sh
frontend/: .env.example  Dockerfile  app.py  requirements.txt  start-frontend.sh
sample_data/: bank_statement.csv  invoice_register.csv
shared/: gcp_utils.py  models.py
(+6 files in other folders)
